2009-09-18  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #11831: Removed reference operator from an object

2009-09-18  Ingo Renner  <ingo@typo3.org>

	* Added feature #11843: Add a reports module

2009-09-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11970: RTE in quickedit mode (page module) is broken
	* Fixed bug #11996: Change compreed to compress with adding JS/CSS
	* Follow-up to bug #11985: Move ExtJs CSS-assignment to renderJsKibraries
	* Follow-up to bug #11985: backPath in FE is set too late

2009-09-17  Steffen Kamper  <info@sk-typo3.de>

	* Cleanup #11991: Cleanup TCEforms suggest CSS
	* Fixed bug #11396: redirects not working for felogin on pages with access set
	* Follow-up to bug #11985: corrected calls loadScriptaculous() in tceforms

2009-09-17  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #11983: TCEforms suggest has no search indicator, credits Steffen Gebert
	* Follow-up to bug #11983: label 'Searching...' was not translatable

2009-09-17  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11906: Extension Manager is not translatable (part 4) (thanks to Christopher Stelmaszyk)
	* Fixed bug #11987: Extension Manager is not translatable (part 5) (thanks to Christopher Stelmaszyk)
	* Fixed bug #11564: Change Hardcoded MD5 Password Encryption in User->Setup. Needed for extension "saltedpasswords" (thanks to Steffen Ritter)
	* Fixed bug #9270: Editors can´t undelete records in history (thanks to Christian Hernmarck)
	* Added tweak #11881: Add pencil icon to "Edit the whole template record." in Template editor (thanks to Patrick Gaumond)

2009-09-17  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Set SVN properties
	* Fixed bug #11985: Optimize disposal of t3lib_PageRenderer (thanks to Steffen Kamper)
	* Added feature #11669: Provide a reason for why $TSFE->set_no_cache() has been triggered (thanks to Michael Stucki)
	* Added feature #2278: Add hook to t3lib_TCEmain::checkModifyAccessList() (thanks to Michael Stucki)